Fixed section spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -65,7 +65,7 @@ img {
 }
 
 section {
-    padding: 85px 0 85px 0;
+    padding: 10px 0 75px 0;
     width: 100vw;
     display: flex;
     justify-content: center;
